--- a/clinic/ClinicApp/src/main/resources/templates/login.html
+++ b/clinic/ClinicApp/src/main/resources/templates/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+		xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0">
@@ -47,7 +47,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	</form>
 	
 	<div>
-		<p>Shopme Control Panel - Copyright &copy; Shopme</p>
+		<p>Clinic Login Panel - Copyright &copy; Mok Zhi Zhuan</p>
 	</div>
 </div>
 </body>
