--- a/clinic/ClinicApp/src/main/resources/templates/checkout.html
+++ b/clinic/ClinicApp/src/main/resources/templates/checkout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
 	<meta http-equiv="Conten-Type" content="text/html"; charset="UTF-8">
