--- a/clinic/ClinicApp/src/main/resources/templates/user_form.html
+++ b/clinic/ClinicApp/src/main/resources/templates/user_form.html
@@ -62,7 +62,7 @@
 		
 		<div>
 			<form th:action="@{/users/save}" method="post" style="max-width: 700px; margin: 0 auto"
-			enctype="multipart/form-data" th:object="${user}">
+			enctype="multipart/form-data" th:object="${user}" onsubmit="checkEmailUnique(this)">
 				<input type="hidden" name="_csrf" value="b67be1ab-ccfc-4074-892d-b87dc490d256"/>
 				<input type="hidden" th:field="*{id}" />
 					<div class="border border-secondary rounded p-3">
